AdminApi delete and add
